--- a/src/_components/ourteam.njk
+++ b/src/_components/ourteam.njk
@@ -12,8 +12,7 @@
 <script src="./page_files/main.js"></script>
 </head>
 <body id="page">
-< class="" id="content">
-
+ 
 <style>
 	/* @import url('https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap'); 
   body {  
@@ -447,7 +446,7 @@ a:hover {
 		  <div class="box p-6 pb-12 has-text-centered">
 			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 100%; width: auto;" src="{{post.data.image}}" alt="" data-config-id="image2">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name2">{{post.data.name}}</h3>
-			<p class="mb-8 has-text-grey-dark" data-config-id="title2">{{post.data.title}}</p>
+			<p class="mb-8 has-text-grey-dark" data-config-id="title2">{{post.data.job}}</p>
 			<div>
 			  <a class="is-inline-flex is-align-items-center is-justify-content-center mr-4 has-background-light" style="width: 40px; height: 40px; border-radius: 100%;" href="https://shuffle.dev/#">
 				<svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg" data-config-id="auto-svg-5-4">
