--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -19,7 +19,7 @@
 				<!-- Main -->
 					<div id="main">
 						 <!--inner-->
-						<div class="inner" style="padding: 2rem;">
+						<div class="inner" style="margin: 1rem;">
 
 							{% include "./_components/header.njk" %}
 		
@@ -41,9 +41,6 @@
 									</section>
 
 									<section>
-										<header class="Major">
-											<h2>Birth Mother Experiences</h2>
-										</header>	
 										{% include "./_components/testimonial.html" %}
 									</section>
 
