--- a/src/_components/faq.njk
+++ b/src/_components/faq.njk
@@ -53,7 +53,7 @@ details[open] div{
 </style>
 
 <header class="major">
-  <h2> FAQ</h2>
+  <h2>Some Common Misconceptions</h2>
 </header>
 <div class="faq-container">
 	{% for post in collections.faq %}
