--- a/src/about.njk
+++ b/src/about.njk
@@ -31,7 +31,7 @@
 								<h3>More About Us</h3>
 							</header>
 							
-						ß	 <div class="row">
+						 <div class="row">
 								<div class="col-6 col-12-small">
 									<h3>Sem turpis amet semper</h3>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
