--- a/src/_components/rainbowbutton.njk
+++ b/src/_components/rainbowbutton.njk
@@ -33,7 +33,7 @@
   -webkit-filter: blur(5px);
   width: calc(100% + 4px);
   height: calc(100% + 4px);
-  animation: glowing-rb 20s linear infinite;
+  /* animation: glowing-rb 20s linear infinite; */
   transition: opacity 0.3s ease-in-out;
   border-radius: 10px;
 }
