--- a/src/_components/contactus.njk
+++ b/src/_components/contactus.njk
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <div class="contact-container">
+    <form name="contact" netlify>
         <h2>Let's talk!</h2>
 
         <form action="#" method="post">
@@ -98,22 +98,6 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const form = document.querySelector('form[data-netlify="true"]');
-            form.addEventListener('submit', function(event) {
-                event.preventDefault();
-                fetch('/', {
-                    method: 'POST',
-                    body: new FormData(form)
-                })
-                .then(() => {
-                    // Show success message or redirect to a thank you page
-                    alert('Thank you for your message! We will be in contact soon.');
-                    // window.location.href = 'thankyou.html'; // Uncomment to redirect to a thank you page
-                })
-                .catch(error => console.error('Error:', error));
-            });
-        });
         
            document.getElementById('client-type').addEventListener('change', function() {
             var dueDateField = document.querySelector('.due-date');
